# Simple2D

./: CMakeLists.txt  README.md
Simple2DEngine/: CMakeLists.txt  main.cpp
Simple2DEngine/header/: Behavior.h  Engine.h  ExternalCodeLoadingWrapper.h  GameObject.h  Map.h  MapManager.h  Simple2D.h  Utils.h  singleton.h  stb_image.h  types.h
Simple2DEngine/src/: GameObject.cpp  Map.cpp  MapManager.cpp  Simple2D.cpp  stb_image.cpp
Simple2DgLibs/: CMakeLists.txt  GameObject.h  Simple2D.cpp  Simple2D.h  index.cpp  update.sh
testCode/: 0.lua  README.md  vertex.shader
testCode/Camera/: CMakeLists.txt  cfg.lua  index.cpp  update.sh
testCode/TestObj/: CMakeLists.txt  cfg.lua  index.cpp  update.sh
testCode/testObj/: cfg.lua
